# music-genre-classifier

./: LICENSE  README.md
genre-classifier-api/: .env.example  README.md  pyproject.toml
genre-classifier-api/app/: main.py  model.pkl  worker.py
genre-classifier-api/app/api/: api.py
genre-classifier-api/app/api/routes/: model.py  models.py  predict.py  results.py
genre-classifier-api/app/core/: celery_app.py  config.py
genre-classifier-api/app/crud/: __init__.py  ml_model_crud.py  result_crud.py
genre-classifier-api/app/db/: database.py  helper.py
genre-classifier-api/app/schemas/: __init__.py  file_request.py  ml_model.py  result.py
genre-classifier-app/: .env.example  README.md  firebase.config.js  index.html  package-lock.json  package.json  vitest.config.js
genre-classifier-app/src/: App.jsx  index.css  main.jsx  store.js
genre-classifier-app/src/components/About/: About.jsx
genre-classifier-app/src/components/Alert/: Alert.css  Alert.jsx
genre-classifier-app/src/components/AudioFile/: AudioFile.css  AudioFile.jsx
genre-classifier-app/src/components/Button/: Button.css  Button.jsx  Button.test.jsx
genre-classifier-app/src/components/Dropzone/: Dropzone.css  Dropzone.jsx
genre-classifier-app/src/components/Home/: Home.css  Home.jsx
genre-classifier-app/src/components/ProgressBar/: ProgressBar.css  ProgressBar.jsx
genre-classifier-app/src/components/Result/: Result.css  Result.jsx
genre-classifier-app/src/components/ToggleButton/: ToggleButton.jsx
genre-classifier-app/src/components/ToggleButtonGroup/: ToggleButtonGroup.css  ToggleButtonGroup.jsx
genre-classifier-app/src/hooks/: index.js
genre-classifier-app/src/reducers/: modelReducer.js  resultsReducer.js
genre-classifier-app/src/services/api/: classifier.js  (+1 more)
genre-predictor-api/: README.md  pyproject.toml
genre-predictor-app/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
genre-predictor-app/src/: App.jsx  index.css
model-training/: ml_training_notebook.ipynb
(+10 files in other folders)
